# IndProgTask2

./: CMakeLists.txt  CMakePresets.json  IndProgTask2.cpp  IndProgTask2.h  conanfile.txt  files.txt  zero_input.txt
Analyzer/: Analyzer.cpp  Client_activity_analyzer.cpp  Client_info_analyzer.cpp  Transaction_pool.cpp
Analyzer/Transaction/: Transaction.cpp
Bank/: bank.cpp
Clients_operations/: Client_operation_tools.cpp  Close_deposit.cpp  Create_credit.cpp  Create_debit.cpp  Create_deposit.cpp  Exchange_currency.cpp  Print_acc_info.cpp  Top_up.cpp  Withdraw.cpp
Command/: Command.cpp
Command/Analyzer/: Client_activity_report_command.cpp  Find_regulars_command.cpp  Find_repeated_command.cpp  Find_transaction_command.cpp  Last_transaction_command.cpp
Command/Client_approaches/: Close_deposit_command.cpp  Create_credit_command.cpp  Create_debit_command.cpp  Create_deposit_command.cpp  Exchange_currency_command.cpp  Print_acc_info_command.cpp  Top_up_command.cpp  Withdraw_command.cpp
Command/Online/: Add_money_from_another_bank_command.cpp  Transfer_between_accs_of_other_client_command.cpp  Transfere_between_accs_of_one_client_command.cpp
Command/Time_events/: End_of_the_Quater_command.cpp  End_of_the_Semi_command.cpp  End_of_the_day_command.cpp  End_of_the_month_command.cpp  End_of_the_year_command.cpp  Start_of_the_day_command.cpp
Common_tools/: Try_reserve.cpp  add_money_to_bank_acc.cpp  check_if_more_then_credit.cpp  check_string_by_scheme.cpp  delete_spaces_from_start_and_end.cpp  deposit_in_period.cpp  get_client.cpp  try_reduce_money_from_bank_acc.cpp
Data_types/Complex/Account/: Account.cpp
Data_types/Complex/Bank_account/: Bank_account.cpp
Data_types/Complex/Client/: Client.cpp
Data_types/Complex/Client_account/: Client_account.cpp
Data_types/Complex/Client_debt/: Client_debt.cpp
Data_types/Complex/Credit/: Credit.cpp
Data_types/Complex/Deposit/: Deposit.cpp
Data_types/Complex/Exchange_info/: Exchange_info.cpp
Data_types/Complex/Work_place/: Work_place.cpp
Data_types/Enums/Account_currency_type/: Account_currency_type.cpp
Data_types/Enums/Account_type/: Account_type.cpp
Data_types/Enums/Client_type/: Client_type.cpp
Data_types/Enums/Credit_type/: Credit_type.cpp
Data_types/Enums/Debit_type/: Debit_type.cpp
Data_types/Enums/Work_place_type/: Work_place_type.cpp
Data_types/Simple/Bank_string/: Bank_string.cpp
Data_types/Simple/Date/: Date.cpp
Data_types/Simple/Money/: Money.cpp
Data_types/Simple/Time/: Time.cpp
IDgen/: IDgen.cpp
Init/: Init_bank.cpp
Online_operations/: add_money_from_another_bank.cpp  tr_one_client.cpp  tr_other_client.cpp
Order_book/: Order_book.cpp
Time_events/: Time_events.cpp  Time_tools.cpp
include/: Client_operation.hpp  Commands.hpp  Common_tools.hpp  Data_types.hpp  IDgen.hpp  Init_bank.hpp  Order_book.hpp  bank.hpp
include/Analyzer/: Analyzer.hpp  Client_activity_analyzer.hpp  Client_enter_analyzer.hpp  Transaction.hpp  Transaction_pool.hpp
include/Clients_operations/: Client_operation_tools.hpp  Client_operations.hpp
include/Commands/: Analyze_commands.hpp  Clients_approach.hpp  Command.hpp  Online_operations.hpp  Time_events.hpp
include/Complex/: Account.hpp  Bank_account.hpp  Client.hpp  Client_account.hpp  Client_debt.hpp  Complex_data_types.hpp  Credit.hpp  Deposit.hpp  Exchange_info.hpp  Work_place.hpp
include/Enums/: Account_currency_type.hpp  Account_type.hpp  Client_type.hpp  Credit_type.hpp  Deposit_type.hpp  Enums.hpp  Work_place_type.hpp
include/Online_operations/: Online_operations.hpp
include/Simple/: Bank_string.hpp  Date.hpp  Money.hpp  Simple_data_types.hpp  Time.hpp
include/Time_events/: Time_events.hpp  Time_tools.hpp
include/tests/: loadConfigs.hpp
tests/: CMakeLists.txt  TestApproaches.cpp  loadConfigs.cpp
